# CedarFramework

./: README.md
code/: CMakeLists.txt
code/cmake/: CedarFrameworkConfig.cmake
code/inc/CedarFramework/: Deserialization.hpp  LoggingCategories.hpp  Query.hpp  Serialization.hpp
code/src/: Deserialization.cpp  LoggingCategories.cpp  Query.cpp  Serialization.cpp
code/tests/: CMakeLists.txt
code/tests/unit/: CMakeLists.txt
code/tests/unit/Deserialization/: CMakeLists.txt  testDeserialization.cpp
code/tests/unit/Query/: CMakeLists.txt  testQuery.cpp
code/tests/unit/Serialization/: CMakeLists.txt  testSerialization.cpp
